Return results in rest of commands